// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<breadcrumb> demo: > render [basic] correctly 1`] = `
<div role="list" class="sd-breadcrumb">
  <div role="listitem" class="sd-breadcrumb-item">Home
    <!---->
  </div>
  <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
      <path d="M29.506 6.502 18.493 41.498"></path>
    </svg></div>
  <div role="listitem" class="sd-breadcrumb-item">Channel
    <!---->
  </div>
  <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
      <path d="M29.506 6.502 18.493 41.498"></path>
    </svg></div>
  <div role="listitem" class="sd-breadcrumb-item">News
    <!---->
  </div>
  <!---->
</div>
`;

exports[`<breadcrumb> demo: > render [dropdown] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item"><a href="#/">Home</a>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item sd-breadcrumb-item-with-dropdown"><a href="#/channel">Channel</a><span aria-hidden="true" class="sd-breadcrumb-item-dropdown-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span></div>
      <!---->
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item"><span>News</span>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item sd-breadcrumb-item-with-dropdown"> Channel <span aria-hidden="true" class="sd-breadcrumb-item-dropdown-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span></div>
      <!---->
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item sd-breadcrumb-item-with-dropdown"> Channel <span aria-hidden="true" class="sd-breadcrumb-item-dropdown-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span></div>
      <!---->
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<breadcrumb> demo: > render [ellipsis] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item" aria-label="ellipses of breadcrumb items"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
          <path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
        </svg>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <!---->
      <!---->
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">Post
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item" aria-label="ellipses of breadcrumb items"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
          <path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
        </svg>
        <!---->
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <!---->
      <!---->
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">Post
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<breadcrumb> demo: > render [icon] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-home" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M7 17 24 7l17 10v24H7z"></path>
          <path d="M20 28h8v13h-8z"></path>
        </svg>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">Channel
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-home" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M7 17 24 7l17 10v24H7z"></path>
          <path d="M20 28h8v13h-8z"></path>
        </svg>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-at" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M31 23a7 7 0 1 1-14 0 7 7 0 0 1 14 0Zm0 0c0 3.038 2.462 6.5 5.5 6.5A5.5 5.5 0 0 0 42 24c0-9.941-8.059-18-18-18S6 14.059 6 24s8.059 18 18 18c4.244 0 8.145-1.469 11.222-3.925"></path>
        </svg> Channel
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<breadcrumb> demo: > render [routes] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item"><a href="#/">Home</a>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item"><a href="#/channel">Channel</a>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item"><span>News</span>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item"><a href="" class="sd-link sd-link-status-normal">
          <!--v-if-->Home
        </a>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item"><a href="/channel" class="sd-link sd-link-status-normal">
          <!--v-if-->Channel
        </a>
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item"><a href="/channel/news" class="sd-link sd-link-status-normal">
          <!--v-if-->News
        </a>
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<breadcrumb> demo: > render [separator] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m16 39.513 15.556-15.557L16 8.4"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">Channel
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m16 39.513 15.556-15.557L16 8.4"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator">~</div>
      <div role="listitem" class="sd-breadcrumb-item">Channel
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator">~</div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator">-&gt;</div>
      <div role="listitem" class="sd-breadcrumb-item">Channel
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m16 39.513 15.556-15.557L16 8.4"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<breadcrumb> demo: > render [size] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">Channel
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div role="list" class="sd-breadcrumb sd:text-xs">
      <div role="listitem" class="sd-breadcrumb-item">Home
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">Channel
        <!---->
      </div>
      <div aria-hidden="true" class="sd-breadcrumb-item-separator"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-oblique-line" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M29.506 6.502 18.493 41.498"></path>
        </svg></div>
      <div role="listitem" class="sd-breadcrumb-item">News
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;
